# compiler

./: .gitignore  CMakeLists.txt  README.md
lib/: parser.cpp  parser.hpp  token.cpp
src/: ir.c  ir.cpp  ir.h  lex.yy.c  main.cpp  node.cpp  node.h  parser.cpp  parser.hpp  parser.tab.c  parser.tab.h  parser.y  symtab.cpp  symtab.h  token.cpp  token.l  y.tab.c  y.tab.h
src/Eeyore2Tigger/: Eeyore2Tigger.l  Eeyore2Tigger.y  Tir.cpp  Tir.h  Tnode.cpp  Tnode.h  parser.y  tymbol.cpp  tymbol.h
src/SysY2Eeyore/: SysY2Eeyore.l  SysY2Eeyore.y  ir.cpp  ir.h  node.cpp  node.h
src/Tigger2RiscV/: Tigger2RiscV.l  Tigger2RiscV.y
